|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.7
- Zend Engine:
  . Fixed bug #55156 (ReflectionClass::getDocComment() returns comment even
    though the class has none). (Felipe)

- Core
  . Fixed bug #54332 (Crash in zend_mm_check_ptr // Heap corruption). (Dmitry)
  . Fixed bug #53727 (Inconsistent behavior of is_subclass_of with interfaces)
    (Ralph Schindler, Dmitry)
  . Fixed buffer overflow on overlog salt in crypt(). (Clément LECIGNE, Stas)
  . Fixed bug #52935 (call exit in user_error_handler cause stream relate
    core). (Gustavo)

- MCrypt
  . Change E_ERROR to E_WARNING in mcrypt_create_iv when not enough data
    has been fetched (Windows). (Pierre)
  . Fixed bug #55169 (mcrypt_create_iv always fails to gather sufficient random 
    data on Windows). (Pierre)

- PDO DBlib:
  . Fixed bug #54329 (MSSql extension memory leak).
    (dotslashpok at gmail dot com)

30 Jun 2011, PHP 5.3.7 RC2
- Core:
  . Fixed crash in error_log(). (Felipe) Reported by Mateusz Kocielski.
  . Fixed bug #55082 (var_export() doesn't escape properties properly).
    (Gustavo)

- DateTime extension:
  . Fixed bug where the DateTime object got changed while using date_diff().
    (Derick)

- DBA extension:
  . Supress warning on non-existent file open with Berkeley DB 5.2 (Chris Jones)
    
- PDO ODBC driver:
  . Fixed data type usage in 64bit. (leocsilva at gmail dot com)

- PHP-FPM SAPI:
  . Implemented FR #54499 (FPM ping and status_path should handle HEAD request). (fat)
  . Implemented FR #54172 (Overriding the pid file location of php-fpm). (fat)
  . Fixed missing Expires and Cache-Control headers for ping and status pages.
    (fat)
  . Fixed memory leak. (fat) Reported and fixed by Giovanni Giacobbi.
  . Fixed wrong value of log_level when invoking fpm with -tt. (fat)

- SPL extension:
  . Fixed bug #54971 (Wrong result when using iterator_to_array with use_keys
    on true). (Pierrick)

16 Jun 2011, PHP 5.3.7 RC1